2008-09-20  Justin Bogner  <mail@justinbogner.com>  (tiny change)

	* play/fortune.el (fortune-program-options): Change to a list.
	(fortune-in-buffer): Use apply.

2008-09-20  Ulrich Mueller  <ulm@kph.uni-mainz.de>

	* emacs-lisp/authors.el: Change encoding of file to utf-8.
	(authors-coding-system): Likewise.

2008-09-20  Ami Fischman  <ami@fischman.org>

	* savehist.el (savehist-save): Handle errors in writing as well as
	reading.

2008-09-20  Michael Olson  <mwolson@gnu.org>

	* emacs-lisp/tq.el (tq-create): Disable undo in tq buffer in order
	to provide a minimal performance boost.

2008-09-19  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el (proced-grammar-alist, proced-custom-attributes)
	(proced-format-alist, proced-format, proced-filter-alist)
	(proced-filter, proced-sort): Use defcustom.
	(proced-mode): Fix docstring.
	(proced-process-attributes): Handle return value nil of functions
	in proced-custom-attributes.

2008-09-19  Martin Rudalics  <rudalics@gmx.at>

	* textmodes/sgml-mode.el (sgml-tag-syntax-table): Remove prefix
	flag from "'" entry in sgml-tag-syntax-table.  (Bug#946)

2008-09-19  Miles Bader  <miles@gnu.org>

	* comint.el (comint-output-filter): Make field properties for
	output text front-sticky.

2008-09-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-show-log-entry):
	* vc-git.el (vc-git-show-log-entry): Deal with a nil argument,
	C-x v l for a directory uses that.

2008-09-18  Simon Josefsson  <simon@josefsson.org>

	* files.el (auto-mode-alist): Use sieve-mode for .sv, .siv, and
	.sieve files.

2008-09-18  Martin Rudalics  <rudalics@gmx.at>

	* help-macro.el (make-help-screen): Preserve key bindings
	established in help-mode call when exiting this macro.

2008-09-17  Kenichi Handa  <handa@m17n.org>

	* language/burmese.el: Fix setting of composition-function-table.

2008-09-17  Martin Rudalics  <rudalics@gmx.at>

	* info.el (Info-follow-nearest-node): Don't raise an error for
	mouse-1 clicks.
